--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -120,6 +120,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -147,15 +148,12 @@
   <ItemGroup>
     <ClCompile Include="errorhandling.cpp" />
     <ClCompile Include="glad.c" />
-    <ClCompile Include="helper\cube.cpp" />
     <ClCompile Include="helper\glslprogram.cpp" />
     <ClCompile Include="helper\glutils.cpp" />
     <ClCompile Include="helper\objmesh.cpp" />
     <ClCompile Include="helper\plane.cpp" />
     <ClCompile Include="helper\stb\stb_image.cpp" />
-    <ClCompile Include="helper\teapot.cpp" />
     <ClCompile Include="helper\texture.cpp" />
-    <ClCompile Include="helper\torus.cpp" />
     <ClCompile Include="helper\trianglemesh.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scenebasic_uniform.cpp" />
@@ -167,7 +165,6 @@
   <ItemGroup>
     <ClInclude Include="errorhandling.h" />
     <ClInclude Include="helper\aabb.h" />
-    <ClInclude Include="helper\cube.h" />
     <ClInclude Include="helper\drawable.h" />
     <ClInclude Include="helper\glslprogram.h" />
     <ClInclude Include="helper\glutils.h" />
@@ -177,29 +174,10 @@
     <ClInclude Include="helper\scenerunner.h" />
     <ClInclude Include="helper\stb\stb_image.h" />
     <ClInclude Include="helper\stb\stb_image_write.h" />
-    <ClInclude Include="helper\teapot.h" />
-    <ClInclude Include="helper\teapotdata.h" />
     <ClInclude Include="helper\texture.h" />
-    <ClInclude Include="helper\torus.h" />
     <ClInclude Include="helper\trianglemesh.h" />
     <ClInclude Include="helper\utils.h" />
     <ClInclude Include="scenebasic_uniform.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="media\texture\ao_ears.png" />
-    <Image Include="media\texture\bluewater.png" />
-    <Image Include="media\texture\brick1.jpg" />
-    <Image Include="media\texture\cement.jpg" />
-    <Image Include="media\texture\fire.png" />
-    <Image Include="media\texture\flower.png" />
-    <Image Include="media\texture\hardwood2_diffuse.jpg" />
-    <Image Include="media\texture\hardwood2_roughness.jpg" />
-    <Image Include="media\texture\me_textile.png" />
-    <Image Include="media\texture\moss.png" />
-    <Image Include="media\texture\ogre_diffuse.png" />
-    <Image Include="media\texture\ogre_normalmap.png" />
-    <Image Include="media\texture\smoke.png" />
-    <Image Include="media\texture\star.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
