Added basic shadow map shading.

--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -148,12 +148,15 @@
   <ItemGroup>
     <ClCompile Include="errorhandling.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="helper\frustum.cpp" />
     <ClCompile Include="helper\glslprogram.cpp" />
     <ClCompile Include="helper\glutils.cpp" />
     <ClCompile Include="helper\objmesh.cpp" />
     <ClCompile Include="helper\plane.cpp" />
     <ClCompile Include="helper\stb\stb_image.cpp" />
+    <ClCompile Include="helper\teapot.cpp" />
     <ClCompile Include="helper\texture.cpp" />
+    <ClCompile Include="helper\torus.cpp" />
     <ClCompile Include="helper\trianglemesh.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scenebasic_uniform.cpp" />
@@ -161,11 +164,14 @@
   <ItemGroup>
     <None Include="shader\basic_uniform.frag" />
     <None Include="shader\basic_uniform.vert" />
+    <None Include="shader\solid.fs" />
+    <None Include="shader\solid.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="errorhandling.h" />
     <ClInclude Include="helper\aabb.h" />
     <ClInclude Include="helper\drawable.h" />
+    <ClInclude Include="helper\frustum.h" />
     <ClInclude Include="helper\glslprogram.h" />
     <ClInclude Include="helper\glutils.h" />
     <ClInclude Include="helper\objmesh.h" />
@@ -174,7 +180,10 @@
     <ClInclude Include="helper\scenerunner.h" />
     <ClInclude Include="helper\stb\stb_image.h" />
     <ClInclude Include="helper\stb\stb_image_write.h" />
+    <ClInclude Include="helper\teapot.h" />
+    <ClInclude Include="helper\teapotdata.h" />
     <ClInclude Include="helper\texture.h" />
+    <ClInclude Include="helper\torus.h" />
     <ClInclude Include="helper\trianglemesh.h" />
     <ClInclude Include="helper\utils.h" />
     <ClInclude Include="scenebasic_uniform.h" />
