--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="errorhandling.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="helper\frustum.cpp" />
     <ClCompile Include="helper\glslprogram.cpp" />
     <ClCompile Include="helper\glutils.cpp" />
     <ClCompile Include="helper\objmesh.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="errorhandling.h" />
     <ClInclude Include="helper\aabb.h" />
     <ClInclude Include="helper\drawable.h" />
+    <ClInclude Include="helper\frustum.h" />
     <ClInclude Include="helper\glslprogram.h" />
     <ClInclude Include="helper\glutils.h" />
     <ClInclude Include="helper\objmesh.h" />
